# anydl

./: README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
anydl/: Dockerfile  app.py  requirements.txt
